mail de notificaciones reservas

--- a/TPIntegrador/src/utiles/handlebars/plantilla.hbs
+++ b/TPIntegrador/src/utiles/handlebars/plantilla.hbs
@@ -53,7 +53,7 @@
 
     <h2>Notificación de nueva reserva</h2>
     <ul>
-      <li><strong>Fecha de reserva:</strong> {{ fecha }}</li>
+      <li><strong>Fecha de reserva:</strong> {{ fecha_reserva }}</li>
       <li><strong>Salón:</strong> {{ salon }}</li>
       <li><strong>Turno:</strong> {{ turno }}</li>
     </ul>
