OK - Correcciones en la función extra de Dani | Notificacionespor mail para Reservas

--- a/TPIntegrador/src/utiles/handlebars/plantilla.hbs
+++ b/TPIntegrador/src/utiles/handlebars/plantilla.hbs
@@ -160,7 +160,7 @@
         <div class="creador-info">
           <div class="creador-label">👤 Reserva creada por:</div>
           <div style="font-size: 18px; font-weight: 600; margin: 8px 0;">{{creado_por}}</div>
-          <span class="badge">{{tipo_creador}}</span>
+          <span class="badge">{{tipo_usuario}}</span>
         </div>
       </div>
 
